--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
-    <title>Hello World</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Counter</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <div>Hello Wooorld</div>
-    <div>Hello Woooorld</div>
+    <div class="screen">0</div>
+    
+    <div class="buttons">
+    <button class="negative">-</button>
+    <button class="positive">+</button>
+    </div>
+    
+    <script src="Counter.js"></script>
 </body>
 </html>
